@@ -285,7 +285,7 @@ class TestDummyModel(unittest.TestCase):
         klass = self._getTargetClass()
         return klass(name, parent, **kw)
 
-    def test__setitem__and__getitem__and__delitem__and__contains__(self):
+    def test__setitem__and__getitem__and__delitem__and__contains__and_get(self):
         class Dummy:
             pass
         dummy = Dummy()
@@ -294,10 +294,13 @@ class TestDummyModel(unittest.TestCase):
         self.assertEqual(dummy.__name__, 'abc')
         self.assertEqual(dummy.__parent__, model)
         self.assertEqual(model['abc'], dummy)
+        self.assertEqual(model.get('abc'), dummy)
         self.assertRaises(KeyError, model.__getitem__, 'none')
         self.failUnless('abc' in model)
         del model['abc']
         self.failIf('abc' in model)
+        self.assertEqual(model.get('abc', 'foo'), 'foo')
+        self.assertEqual(model.get('abc'), None)
 
     def test_extra_params(self):
         model = self._makeOne(foo=1)
