@@ -1,3 +1,11 @@
+Next Release
+
+Bug Fixes
+---------
+
+- ``repoze.bfg.testing.DummyModel`` did not have a ``get`` method;
+  it now does.
+
 0.6.4 (2009-01-23)
 ==================
 
